tests/ui/blind/blind-item-block-middle.stderr
error[E0308]: mismatched types
  --> $DIR/blind-item-block-middle.rs:6:9
   |
LL | mod foo { pub struct bar; }
   |           -------------- unit struct defined here
...
LL |     let bar = 5;
   |         ^^^   - this expression has type `{integer}`
   |         |
   |         expected integer, found `bar`
   |         `bar` is interpreted as a unit struct, not a new binding
   |         help: introduce a new binding instead: `other_bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
